Fix card spacing

--- a/static/material.css
+++ b/static/material.css
@@ -63,3 +63,11 @@
 .body-link:active {
   color: #6200ee;
 }
+
+.dress-up-gif {
+  height: 405px;
+}
+
+.GROCERY-screenshot {
+  height: 375px;
+}
